--- a/src/components/Elements/Hero/Hero.scss
+++ b/src/components/Elements/Hero/Hero.scss
@@ -20,12 +20,12 @@
 
     &__title {
       position: absolute;
-      bottom: 7rem;
+      bottom: 10rem;
       left: 10rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      width: 40rem;
+      width: 30rem;
 
       h1 {
         font-size: 2.5rem;
@@ -73,16 +73,13 @@
   .hero {
     &__hero {
       &__title {
-        padding: 2rem;
+        padding: 1rem;
         width: 100%;
-        bottom: 5rem;
-        left: 50%;
-        transform: translateX(-50%);
-        text-align: center;
+        left: 0;
+        bottom: 4rem;
 
         h1 {
-          text-align: center;
-          font-size: 1.4rem;
+          font-size: 1.5rem;
         }
 
         a {
