--- a/src/components/Elements/Newsletter/Newsletter.scss
+++ b/src/components/Elements/Newsletter/Newsletter.scss
@@ -11,8 +11,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5rem;
-    width: 50%;
+    justify-content: space-between;
+    width: 100%;
+    height: 30vh;
     padding: 5rem 2rem 0 2rem;
 
     &__header {
@@ -75,7 +76,7 @@
   }
 
   &__right {
-    width: 50%;
+    width: 100%;
     max-height: 75svh;
 
     img {
@@ -97,7 +98,8 @@
       align-items: flex-start;
       gap: 3.75rem;
       width: 100%;
-      padding: 1rem 1rem 3rem 1rem;
+      height: auto;
+      padding: 1rem 1rem 3rem 5rem;
 
       &__header {
         gap: 2rem;
@@ -130,14 +132,19 @@
   .newsletter {
     &__left {
       gap: 3.5rem;
-      padding: 1rem 1rem 3rem 2rem;
+      padding: 1rem 1rem 3rem 1rem;
 
       &__header {
         gap: 1rem;
+        width: 100%;
 
         h1 {
-          font-size: 1.75rem;
+          font-size: 1.5rem;
         }
+      }
+
+      &__footer {
+        width: 100%;
       }
     }
   }
